--- a/README.asciidoc
+++ b/README.asciidoc
@@ -7,14 +7,14 @@ Kaspar Tamm
 Priit Teelahk
 
 
-== External links
-Fusion 360 CAD - https://www.autodesk.com/products/fusion-360/overview?term=1-YEAR&tab=subscription 
-Remmina - https://remmina.org/
-Altium PCB Design - https://www.altium.com/
-VNC Viewer/Server - https://www.realvnc.com/en/connect/download/viewer/
-OpenSSH - https://www.openssh.com/
-OpenCV - https://opencv.org/
-NumPy - https://numpy.org/
+== External lin
+Fusion 360 CAD - https://www.autodesk.com/products/fusion-360/overview?term=1-YEAR&tab=subscription +
+Remmina - https://remmina.org/ +
+Altium PCB Design - https://www.altium.com/ +
+VNC Viewer/Server - https://www.realvnc.com/en/connect/download/viewer/ +
+OpenSSH - https://www.openssh.com/ +
+OpenCV - https://opencv.org/ +
+NumPy - https://numpy.org/ +
 
 
 
