--- a/README.asciidoc
+++ b/README.asciidoc
@@ -71,6 +71,12 @@ NumPy - https://numpy.org/ +
 *Artur:* Polished our ball detection software. Started developing the moving based on the closest balls x coordinate. (2h) +
 *Kaspar:* Updated Project manager excel file, attached the NUC with screws to the test robot. Also photographed our accomplishments.  (2h) +
 
+=== Thursday 2022-09-29
+*Priit:* Broke the VNC Viewer tried different programs, but ended up back at VNC Viewer. (4h) +
+*Kaspar:* Assisted with research on VNC Viewers.  (2h) +
+
+
+
 
 
 
