--- a/README.asciidoc
+++ b/README.asciidoc
@@ -88,5 +88,9 @@ NumPy - https://numpy.org/ +
 *Madis:* reviewed the slides. (1h) +
 
 
+=== Monday 2022-10-03
+*Madis:* Resolved some issues with Fusion 360 CAM and waiting for supervision. (1h) +
+
+
 
 
