--- a/README.asciidoc
+++ b/README.asciidoc
@@ -122,3 +122,6 @@ NumPy - https://numpy.org/ +
 
 === Friday 2022-10-21
 *Madis:* Designed motor mounts and created assembly with omniwheel, motor holder and motor. (2h) +
+
+=== Sunday 2022-10-23
+*Artur:* Worked on the movement and image processing parts of the code. (3h) +
