--- a/README.asciidoc
+++ b/README.asciidoc
@@ -129,4 +129,9 @@ NumPy - https://numpy.org/ +
 
 === Monday 2022-10-24
 *Madis:* Used lathe to make three aluminum motor mounts. Next step is to clean them and drill holes. (4h) +
+*Artur:* Improved our state machine code.
+*Priit:* Did some coding.
+*Kaspar:* Helped Priit with coding.
 
+=== Wednesday 2022-10-26
+*Priit:* Struggled with classes and serial. (5h)
