--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,10 +1,10 @@
 # Kivipallur-Jurto
 
-Meeskonna liikmed:
-Artur Reitalu
-Kristjan Madis Kask
-Kaspar Tamm
-Priit Teelahk
+Meeskonna liikmed: +
+Artur Reitalu +
+Kristjan Madis Kask +
+Kaspar Tamm +
+Priit Teelahk +
 
 
 == External links
