--- a/README.asciidoc
+++ b/README.asciidoc
@@ -165,3 +165,5 @@ NumPy - https://numpy.org/ +
 *Artur:* reviewed the slides. (1h) +
 *Kaspar:* reviewed the slides.Fixed feedback points and started pcb design (6h) +
 
+=== Thursday 2022-11-03
+*Madis:* Designed new thrower. (3h) +
