--- a/README.asciidoc
+++ b/README.asciidoc
@@ -6,6 +6,8 @@ Kristjan Madis Kask +
 Kaspar Tamm +
 Priit Teelahk +
 
+== Fusion 360 Kivipallur Jürto
+https://gmail1315991.autodesk360.com/g/projects/20220905552789506/data/dXJuOmFkc2sud2lwcHJvZDpmcy5mb2xkZXI6Y28uQ0dDYnZVanRTcks1R1hwZVcyRlpBZw
 
 == External links
 Fusion 360 CAD - https://www.autodesk.com/products/fusion-360/overview?term=1-YEAR&tab=subscription +
