--- a/README.asciidoc
+++ b/README.asciidoc
@@ -266,4 +266,5 @@ Xbox360controller - https://pypi.org/project/xbox360controller/ +
 === Wednesday 2022-11-30
 *Madis:* 3D printed omni wheel and battery holder for testing (2h) +
 
-
+=== Thursday 2022-12-1
+*Madis:* Created CAM for milling new robot. (1h) +
