--- a/electronics/README.asciidoc
+++ b/electronics/README.asciidoc
@@ -4,24 +4,28 @@
 
 * Mainboard consists of 2 separate isolated schematics: 
 ** Logic schematic with is powered with USB source
-Motor drivers schematic that are powered with lithium ion battery
+** Motor drivers schematic is powered with lithium ion battery
 
 * Communication between the mainboard STM32 controller and computer is through microUSB
 
 * Mainboard is programmebel with STLINK-V3 mainboard has for that Samtec connector
 
 * Mainboard has 7 MicroMatch connectors: 
-** 3 for motor encoders (m_1; m_2; m_3)
-** 1 for Thrower motor (Viskaja)
-** 1 for Throwing angle adjust motor (Pl_S)
-** 1 for Ball holder motor (Pl_H)
+** 3 for motor encoders (m_1; m_2; m_3) for thre DC motors
+** 1 for Thrower motor (Viskaja) for one AC motor
+** 1 for Throwing angle adjust motor (Pl_S) for servo motor
+** 1 for Ball holder motor (Pl_H) for servo motor 
 ** 1 for Ball sensor
 
 * Mainboard has 2 voltage regulators 
 ** Logic schematic to turn 5V to 3.3V 
 ** Motor drivers schematic to turn 16V to 5V
 
-* Mainboard has 3 drivers for controlling motors (M_1; M_2; M_3)
+* Mainboard has 3 drivers (DRV8243HQRXYRQ1) for controlling motors (M_1; M_2; M_3). With these drivers we can control 3 DC motors at the same time
+
+* Motor drivers have maximum limit of 35V. But we are using around 16V from lithium ion battery. The current coming out of motor drivers is limited with resistors that are connected to the ITRIP pin and IPROPI pins
+** ITRIP pin is connected with 47k resistor, that sets Voltage to 2.97V
+** IPROPI pin is connected with 2.7k resistor, then the current is limited to 3.38 A.
 
 * Motor drivers can be controlled through 2 PWM signals or one direction signal and one PWM signal
 
@@ -36,3 +40,80 @@ Motor drivers schematic that are powered with lithium ion battery
 * Motor drivers DIAG pin connected to MODE and GND
 
 * Motor drivers DRVOFF pin to put the driver on standby 
+
+== Connector pinouts
+
+=== Logic schematic
+
+* (J15) USB connection 
+** pin 1 +5V_USB
+** pin 2 D-
+** pin 3 D+
+** pin 4 not used
+** pin 5 GND
+** pin 6 SHIELD
+
+* (J7) Programmer connecor
+** pin 1 +3.3V
+** pin 2 Debug SWDIO
+** pin 3 GND
+** pin 4 Debug SWCLIK
+** pin 5 GND
+** pin 6 not used
+** pin 7 not used
+** pin 8 not used
+** pin 9 GND
+** pin 10 Debug NRST
+
+*(J8) Motor 1 encoder (m_1)
+** pin 1 GND
+** pin 2 +3.3V
+** pin 3 Mikro-m1-en1
+** pin 4 Micro-m1-en2
+
+*(J10) Motor 2 encoder (m_2)
+** pin 1 GND
+** pin 2 +3.3V
+** pin 3 Mikro-m2-en1
+** pin 4 Micro-m2-en2
+
+*(J12) Motor 3 encoder (m_3)
+** pin 1 GND
+** pin 2 +3.3V
+** pin 3 Mikro-m3-en1
+** pin 4 Micro-m3-en2
+
+*(J13) Ball sensor
+** pin 1 GND
+** pin 2 +5V_USB
+** pin 3 not used
+** pin 4 LED_B2
+
+
+=== Motor drivers schematic
+
+* Lithium ion battery connection
+** J16 is for + connection
+** J17 is for - connection
+
+*(J14) Thrower connecor (Viskaja)
+** pin 1 GND
+** pin 2 Viskaja_Mootor
+** pin 3 not used
+** pin 3 not used
+
+*(9) Ball holder connecor (Pl_H)
+** pin 1 +5V
+** pin 2 Palli_H
+** pin 3 GND
+** pin 4 not used
+
+*(J11) Throwing angle connecor (Pl_S)
+** pin 1 +5V
+** pin 2 Palli_S
+** pin 3 GND
+** pin 4 not used
+
+
+
+  
