--- a/electronics/README.asciidoc
+++ b/electronics/README.asciidoc
@@ -21,9 +21,9 @@
 ** Logic schematic to turn 5V to 3.3V 
 ** Motor drivers schematic to turn 16V to 5V
 
-* Mainboard has 3 drivers (DRV8243HQRXYRQ1) for controlling motors (M_1; M_2; M_3). With these drivers we can control 3 DC motors at the same time
+* Mainboard has 3 drivers (DRV8243HQRXYRQ1) for controlling motors (M_1; M_2; M_3). With these drivers we can control 3 Pololu brushed DC motors at the same time
 
-* Motor drivers have maximum limit of 25V. But we are using around 16V from lithium ion battery. The current coming out of motor drivers is limited with resistors that are connected to the ITRIP pin and IPROPI pins
+* Motor drivers are not limited to 25V. Capacitors connected to motor drivers have voltage rating of 25V. It's safe to say that supported input voltage is up to 16.8V (4S lithium ion battery), so that there is some voltage headroom. The current coming out of motor drivers is limited with resistors that are connected to the ITRIP pin and IPROPI pins
 ** ITRIP pin is connected with 47k resistor, that sets Voltage to 2.31V
 ** IPROPI pin is connected with 2.7k resistor, then the current is limited to 2.63A.
 
@@ -31,7 +31,7 @@
 
 * Motor drivers need nSLEEP pulse to initialize
 
-* Motor drivers SR pin for slew rate with 47k resistor to avoid PWM losses
+* Motor drivers SR pin for slew rate with 47k resistor. High slew rate is better for efficiency, but you have to be careful with slew rate configuration it has caused problems in previous years
 
 * Motor drivers DRVOFF pin to put the driver on standby 
 
