--- a/README.asciidoc
+++ b/README.asciidoc
@@ -308,3 +308,20 @@ Xbox360controller - https://pypi.org/project/xbox360controller/ +
 
 === Wednesday 2022-12-14
 *Madis:* Designed thrower with changeable throwing angle (4h) +
+
+=== Thursday 2022-12-15
+*Priit:* Improved the code (2h) +
+*Madis:* fixed some problems with sheels and cleaned them (5h) +
+*Kaspar:* Worked on electronics (15h) +
+*Artur:* Worked on the code (2h) +
+
+=== Friday 2022-12-16
+*Priit:* Participated in DeltaX competition (4h) +
+*Madis:* Participated in DeltaX competition (4h) +
+*Kaspar:* Participated in DeltaX competition (4h) +
+*Artur:* Participated in DeltaX competition (4h) +
+
+=== Saturday 2022-12-17
+*Priit:* Participated in course competition (4h) +
+*Kaspar:* Participated in course competition (4h) +
+*Artur:* Participated in course competition (4h) +
